mcp-server/mcp-example/mcp-example-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-example
  namespace: test
spec:
  selector:
    matchLabels:
      app: mcp-example
  template:
    metadata:
      labels:
        app: mcp-example
    spec:
      serviceAccountName: mcp-example-sa
      containers:
      - name: mcp-example
        image: kamalberrybytes/mcp:1.0.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-example-service
  namespace: test
  labels:
    app: mcp-example
spec:
  selector:
    app: mcp-example
  ports:
  - port: 8000
    targetPort: 8000
    appProtocol: kgateway.dev/mcp
