mcp-server/mcp-example/mcp-example-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-example
  namespace: test
spec:
  parentRefs:
  - name: agentgateway-proxy
  rules:
   - matches:
       - path:
           type: PathPrefix
           value: /mcp/mcp-example
     backendRefs:
       - name: mcp-example-backend
         group: agentgateway.dev
         kind: AgentgatewayBackend
